--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cometchat/calls-sdk-react-native": "^4.2.1",
+    "@cometchat/chat-sdk-react-native": "^4.0.14",
+    "@cometchat/chat-uikit-react-native": "^5.0.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-community/netinfo": "^6.1.0",
+    "@react-native/new-app-screen": "0.80.1",
+    "dayjs": "^1.11.13",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-background-timer": "^2.4.1",
+    "react-native-callstats": "^3.73.7",
+    "react-native-svg": "^15.12.0",
+    "react-native-video": "^6.16.0",
+    "react-native-webrtc": "^1.106.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
